# MP3-Metadata-Parser

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  ImportantMethods.h  MP3_Header.cpp  MP3_Header.h  MP3_Metadata.cpp  MP3_Metadata.h  StringFabric.cpp  StringFabric.h
lib/Frames/: Frame.cpp  Frame.h  FrameHeader.cpp  FrameHeader.h
lib/Frames/Classes/: CommentFrame.cpp  CommentFrame.h  CommercialFrame.cpp  CommercialFrame.h  EncryptionMethodRegistrationFrame.cpp  EncryptionMethodRegistrationFrame.h  EqualisationFrame.cpp  EqualisationFrame.h  EventTimingCodesFrame.cpp  EventTimingCodesFrame.h  GroupIdentificationRegistration.cpp  GroupIdentificationRegistration.h  LinkedInformation.cpp  LinkedInformation.h  MusicCD_ID_Frame.cpp  MusicCD_ID_Frame.h  OwnershipFrame.cpp  OwnershipFrame.h  PlayCounterFrame.cpp  PlayCounterFrame.h  PopularimeterFrame.cpp  PopularimeterFrame.h  PositionSynchronisationFrame.cpp  PositionSynchronisationFrame.h  PrivateFrame.cpp  PrivateFrame.h  RecommendedBufferSizeFrame.cpp  RecommendedBufferSizeFrame.h  RelativeVolumeAdjustment.cpp  RelativeVolumeAdjustment.h  SeekFrame.cpp  SeekFrame.h  SynchronisedTextFrame.cpp  SynchronisedTextFrame.h  TermsOfUseFrame.cpp  TermsOfUseFrame.h  TextInformationFrame.cpp  TextInformationFrame.h  URLLinkFrame.cpp  URLLinkFrame.h  (+8 more)
lib/Frames/Fabric/: FrameFabric.cpp  FrameFabric.h
